fixed filter big and fixed seeds

--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -97,7 +97,7 @@
 }
 
 .results {
-    margin-top: 16px;
+    margin: 16px 0 10px 0;
     font: 16px/18px RoundedElegance;
     color: blackBasic;
     white-space: nowrap;
