--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -90,6 +90,7 @@
 }
 
 .filterPanel {
+    padding-right: 262px;
     width: 100%;
     max-width: 1240px;
     margin: 0 auto;
@@ -131,58 +132,6 @@
 
     @media (max-width: 600px) {
         display: block;
-    }
-}
-
-.sort {
-    margin: 11px 0 0 10px;
-
-    @media (max-width: 600px) {
-        margin-top: 0;
-        width: calc(50% - 10px);
-    }
-}
-
-.activeOption {
-    position: relative;
-    padding: 6px 41px 6px 16px;
-    display: inline-block;
-    background: gray4;
-    box-sizing: border-box;
-    font: 300 14px/17px RoundedElegance;
-    color: blackLight;
-    cursor: pointer;
-    white-space: nowrap;
-    overflow: hidden;
-
-    &:before {
-        content: "";
-        width: 0;
-        height: 0;
-        margin-top: -5px;
-        border-style: solid;
-        border-width: 8px 5px 0 5px;
-        border-color: green transparent transparent  transparent;
-        position: absolute;
-        top: 50%;
-        right: 16px;
-        transition: 0.25s ease-in;
-        transition-property: transform, border-color;
-    }
-
-    &:hover {
-        &:before {
-            transform: rotate(180deg);
-            transition: 0.25s ease-out;
-            border-color: blackBasic transparent transparent transparent;
-        }
-    }
-
-    @media (max-width: 600px) {
-        line-height: 16px;
-        padding-top: 8px;
-        padding-bottom: 8px;
-        width: 100%;
     }
 }
 
