fixed: display active size in Basket; Link to product page in Basket.

--- a/src/apps/client/ui/components/Cart/Cart.css
+++ b/src/apps/client/ui/components/Cart/Cart.css
@@ -130,6 +130,10 @@
     margin-bottom: 21px;
 }
 
+.productLink {
+    text-decoration: none;
+}
+
 .productName {
     font-size: 18px;
     line-height: 21px;
