--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -1,6 +1,7 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
 @value redBasic from '../../../../../css/colors.css';
+@value green from '../../../../../css/colors.css';
 
 .header {
     display: flex;
@@ -216,6 +217,11 @@
     color: blackLight;
     text-shadow: -0.2px 0 blackLight, 0 0.2px blackLight, 0.2px 0 blackLight, 0 -0.2px blackLight;
 
+    &:hover {
+        color: green;
+        text-shadow: -0.2px 0 green, 0 0.2px green, 0.2px 0 green, 0 -0.2px green;
+    }
+
     &:last-child {
         margin-right: 0;
     }
@@ -224,6 +230,7 @@
         position: absolute;
         content: url('./img/meniItemLine.jpg');
         right: -25px;
+        pointer-events: none;
     }
 }
 
