--- a/src/apps/client/ui/pages/Articles/Articles.css
+++ b/src/apps/client/ui/pages/Articles/Articles.css
@@ -1,4 +1,33 @@
 @value gray3 from '../../../../../css/colors.css';
+@value whiteBasic from '../../../../../css/colors.css';
+@value blackLight from '../../../../../css/colors.css';
+
+.panelTopWrapper {
+    background-color: whiteBasic;
+}
+
+.panelTop {
+    max-width: 1240px;
+    padding: 0 16px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    box-sizing: content-box;
+
+    @media (max-width: 600px) {
+        padding: 9px 16px;
+    }
+}
+
+.panelTopTitle {
+    font: 16px/18px RoundedElegance;
+    color: blackLight;
+    padding: 16px 0;
+
+    @media (max-width: 600px) {
+        padding: 0;
+    }
+}
 
 .articles {
     position: relative;
