--- a/src/apps/client/ui/components/Footer/Footer.css
+++ b/src/apps/client/ui/components/Footer/Footer.css
@@ -34,6 +34,7 @@
 .youtube {
     width: 36px;
     height: 36px;
+    transition: .5s ease-out;
 }
 
 .instagram {
@@ -44,6 +45,10 @@
 .facebook {
     background-image: url("./img/facebook.svg");
     margin-right: 30px;
+
+    &:hover {
+        background-image: url("./img/facebook-hover.svg");
+    }
 }
 
 .youtube {
