added: hover for buttons; fixed: pseudo-element pointer events; product card hover

--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -98,6 +98,7 @@
         height: 2px;
         background-color: transparent;
         bottom: -5px;
+        pointer-events: none;
     }
 
     &:hover:before {
