--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -10,7 +10,7 @@
     min-width: 288px;
     height: 365px;
     max-height: 365px;
-    margin: 30px 30px 0 0;
+    margin: 30px 26px 2px 2px;
     position: relative;
     display: flex;
     flex-direction: column;
@@ -18,11 +18,11 @@
     overflow: hidden;
     background: whiteBasic;
     text-decoration: none;
-    border: 2px solid transparent;
+    outline: 2px solid transparent;
     transition: .3s ease-out;
 
     &:hover {
-        border-color: green;
+        outline-color: green;
     }
 
     @media (max-width: 640px) {
