--- a/src/apps/client/ui/components/Cart/Cart.css
+++ b/src/apps/client/ui/components/Cart/Cart.css
@@ -278,6 +278,11 @@
     line-height: 21px;
     color: whiteBasic;
     padding: 10px 20px;
+    transition: .5s ease-out;
+
+    &:hover {
+        background-color: green;
+    }
 }
 
 .continueShopping {
