--- a/src/apps/client/ui/components/PopupOrder/PopupOrder.css
+++ b/src/apps/client/ui/components/PopupOrder/PopupOrder.css
@@ -1,5 +1,6 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
+@value green from '../../../../../css/colors.css';
 
 .root {
     position: fixed;
@@ -153,6 +154,11 @@
     margin-top: 30px;
     text-decoration: none;
     text-align: center;
+    transition: .5s ease-out;
+
+    &:hover {
+        background-color: green;
+    }
 
     @media (max-width: 600px) {
         margin-top: 40px;
