--- a/src/apps/client/ui/components/Advantages/Advantages.css
+++ b/src/apps/client/ui/components/Advantages/Advantages.css
@@ -93,6 +93,10 @@
     flex-direction: column;
     align-items: center;
 
+    &:last-child .advantageTitle {
+        margin-top: 35px;
+    }
+
     @media (max-width: 1080px) {
         width: auto;
     }
