added: - ховер смены языка в хедере. changes: - хардкод пути к категориям на главной. removed: - названия категорий с langMap

--- a/src/apps/client/ui/components/LangSwitch/LangSwitch.css
+++ b/src/apps/client/ui/components/LangSwitch/LangSwitch.css
@@ -61,6 +61,10 @@
     position: absolute;
     top: 43px;
     width: 100%;
+
+    .lang:hover {
+        color: green;
+    }
 }
 
 .mobileLangs {
