--- a/src/apps/client/ui/pages/CheckoutPage/CheckoutPage.css
+++ b/src/apps/client/ui/pages/CheckoutPage/CheckoutPage.css
@@ -6,6 +6,7 @@
 @value gray5 from '../../../../../css/colors.css';
 @value gray6 from '../../../../../css/colors.css';
 @value green from '../../../../../css/colors.css';
+@value redBasic from '../../../../../css/colors.css';
 
 input,
 textarea {
@@ -39,7 +40,7 @@ textarea {
     padding: 0 16px;
     box-sizing: content-box;
 
-    @media (max-width: 730px) {
+    @media (max-width: 750px) {
         flex-direction: column;
     }
 
@@ -54,14 +55,14 @@ textarea {
     padding-right: 16px;
     box-sizing: content-box;
 
-    @media (max-width: 825px) {
+    @media (max-width: 870px) {
         padding-right: 40px;
     }
 
-    @media (max-width: 730px) {
+    @media (max-width: 750px) {
         padding-right: 0px;
         max-width: 100%;
-        margin-top: 60px;
+        margin-top: 40px;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -104,15 +105,19 @@ textarea {
     resize: none;
 }
 
+.checkoutInfoInputError {
+    border-color: redBasic;
+}
+
 .deliveryAndPayment {
     display: flex;
     justify-content: space-between;
 
-    @media (max-width: 825px) and (min-width: 731px) {
+    @media (max-width: 870px) and (min-width: 751px) {
         flex-direction: column;
     }
 
-    @media (max-width: 730px) {
+    @media (max-width: 750px) {
         width: 100%;
     }
 
@@ -126,7 +131,7 @@ textarea {
     max-width: 218px;
     padding-right: 10px;
 
-    @media (max-width: 825px) and (min-width: 731px) {
+    @media (max-width: 870px) and (min-width: 751px) {
         max-width: 100%;
         padding-right: 0;
     }
@@ -142,7 +147,7 @@ textarea {
     margin-top: 20px;
     padding-bottom: 5px;
 
-    @media (max-width: 825px) and (min-width: 731px) {
+    @media (max-width: 870px) and (min-width: 751px) {
         text-align: center;
     }
 
@@ -214,12 +219,7 @@ textarea {
 }
 
 .details {
-    width: 367px;
-    min-width: 367px;
-
-    @media (max-width: 730px) {
-        width: auto;
-        min-width: auto;
+    @media (max-width: 750px) {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -228,9 +228,7 @@ textarea {
 
 .products {
     width: 100%;
-    height: 100px;
-    margin-top: 20px;
-    background: rgba(35, 35, 35, 0.7);
+    font-family: RoundedElegance;
 }
 
 .priceWrap {
@@ -242,7 +240,7 @@ textarea {
         display: none;
     }
 
-    @media (max-width: 730px) {
+    @media (max-width: 750px) {
         display: none;
 
         &.mobile {
@@ -293,5 +291,47 @@ textarea {
 
     @media (max-width: 450px) {
         margin-top: 20px;
+    }
+}
+
+.noItemsContainer {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 20px 5%;
+    align-items: center;
+}
+
+.noItemsText {
+    font-family: RoundedElegance;
+    font-size: 32px;
+    line-height: 39px;
+    text-align: center;
+}
+
+.noItemsTextLink {
+    text-decoration: none;
+    color: blackLight;
+
+    @media (max-width: 600px) {
+        font-size: 26px;
+    }
+}
+
+.noItemsTextButton {
+    font: 18px/21px RoundedElegance;
+    padding: 10px 20px;
+    border: none;
+    margin: 30px auto 0 auto;
+    color: whiteBasic;
+    background: blackLight;
+    min-width: 200px;
+    display: block;
+    cursor: pointer;
+    transition: .5s ease-out;
+
+    &:hover {
+        background-color: green;
     }
 }
