--- a/src/apps/client/ui/components/FilterCheckBox/FilterCheckBox.css
+++ b/src/apps/client/ui/components/FilterCheckBox/FilterCheckBox.css
@@ -1,12 +1,12 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
-@value green from '../../../../../css/colors.css';
+@value greenBasic from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
 .filter {
     &.active {
         .title {
-            background: green;
+            background: greenBasic;
             color: whiteBasic;
             transition: 0.25s ease-out;
 
@@ -42,7 +42,7 @@
         height: 0;
         border-style: solid;
         border-width: 8px 5px 0 5px;
-        border-color: green transparent transparent  transparent;
+        border-color: greenBasic transparent transparent  transparent;
         position: absolute;
         top: 50%;
         right: 15px;
@@ -59,13 +59,13 @@
     position: absolute;
     padding: 8px 25px;
     transition: max-height 0.25s ease-out;
-    background: green;
+    background: greenBasic;
     min-width: 242px;
 }
 
 .option {
     font: 14px/16px RoundedElegance;
-    color: white;
+    color: whiteBasic;
     padding: 9px 30px;
     display: block;
     position: relative;
