--- a/src/apps/client/ui/pages/Contacts/Contacts.css
+++ b/src/apps/client/ui/pages/Contacts/Contacts.css
@@ -1,7 +1,7 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
-@value green from '../../../../../css/colors.css';
+@value greenBasic from '../../../../../css/colors.css';
 
 .contacts {
     height: 100%;
@@ -177,7 +177,7 @@
     transition: .5s ease-out;
 
     &:hover {
-        background-color: green;
+        background-color: greenBasic;
     }
 }
 
