--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -1,8 +1,9 @@
 @value whiteBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
 @value blackLighter from '../../../../../css/colors.css';
-@value green from '../../../../../css/colors.css';
+@value greenBasic from '../../../../../css/colors.css';
 @value redBasic from '../../../../../css/colors.css';
+@value gray0 from '../../../../../css/colors.css';
 @value gray3 from '../../../../../css/colors.css';
 
 .root {
@@ -41,7 +42,7 @@
         top: 5px;
         width: 6px;
         height: 6px;
-        background: green;
+        background: greenBasic;
         border-radius: 50%;
     }
 }
@@ -59,7 +60,7 @@
     padding-right: 25px;
     display: inline-block;
     font: 25px/41px RoundedElegance;
-    color: gray;
+    color: gray0;
     text-decoration: line-through;
 }
 
@@ -113,7 +114,7 @@
         height: 0;
         border-style: solid;
         border-width: 8px 5px 0 5px;
-        border-color: green transparent transparent transparent;
+        border-color: greenBasic transparent transparent transparent;
         position: absolute;
         top: 50%;
         right: 10px;
@@ -147,13 +148,13 @@
     transition: .5s ease-out;
 
     &:hover {
-        background-color: green;
+        background-color: greenBasic;
     }
 
     &.active {
         color: blackLight;
         background-color: whiteBasic;
-        border-color: green;
+        border-color: greenBasic;
     }
 }
 
