--- a/src/apps/client/ui/components/ProductFilters/ProductFilters.css
+++ b/src/apps/client/ui/components/ProductFilters/ProductFilters.css
@@ -1,6 +1,6 @@
 @value blackBasic from '../../../../../css/colors.css';
 @value blackLight from '../../../../../css/colors.css';
-@value green from '../../../../../css/colors.css';
+@value greenBasic from '../../../../../css/colors.css';
 @value gray4 from '../../../../../css/colors.css';
 
 .sort {
@@ -45,7 +45,7 @@
          margin-top: -5px;
          border-style: solid;
          border-width: 8px 5px 0 5px;
-         border-color: green transparent transparent transparent;
+         border-color: greenBasic transparent transparent transparent;
          position: absolute;
          top: 50%;
          right: 16px;
