--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -2,9 +2,9 @@
 @value blackBasic: #000000;
 @value blackLight: #232323;
 @value blackLighter: #2B2B2C;
-@value green: #25716C;
+@value greenBasic: #25716C;
 @value redBasic: #DC4E41;
-@value gray: #919191;
+@value gray0: #919191;
 @value gray1: #AFAFAF;
 @value gray2: #F8F9FA;
 @value gray3: #F1F1F1;
