fixed price color logic

--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -68,6 +68,10 @@
     margin: 10px 0;
     display: inline-block;
     font: 36px/41px RoundedElegance;
+    color: blackLight;
+}
+
+.discountPrice{
     color: redBasic;
 }
 
