fixed percentage view

--- a/src/apps/client/ui/components/Card/Card.css
+++ b/src/apps/client/ui/components/Card/Card.css
@@ -123,6 +123,11 @@
         padding: 3px 10px;
     }
 }
+
+.percentage{
+    font: 18px/21px HelveticaNeueCyr;
+}
+
 .discount {
     color: redBasic;
     background: whiteBasic;
