--- a/src/apps/client/ui/components/Gallery/Gallery.css
+++ b/src/apps/client/ui/components/Gallery/Gallery.css
@@ -33,6 +33,10 @@
     background: redBasic;
 }
 
+.percentage{
+    font: 18px/21px HelveticaNeueCyr;
+}
+
 .mainImg {
     width: 100%;
     height: auto;
