--- a/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
+++ b/src/apps/client/ui/pages/ProductsPage/ProductsPage.css
@@ -27,15 +27,17 @@
 }
 
 .subCategories {
-    padding: 2px 225px 0px;
+    padding: 2px 225px 0;
     max-width: 1240px;
+    min-height: 40px;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     margin: 0 auto;
 
     @media (max-width: 1210px) {
-        padding: 2px 0 0 0;
+        padding: 0;
+        min-height: inherit;
     }
 
     @media (max-width: 960px) {
