fixed wishlist logic into cart

--- a/src/apps/client/ui/components/CartProduct/CartProduct.css
+++ b/src/apps/client/ui/components/CartProduct/CartProduct.css
@@ -75,6 +75,11 @@
     height: 14px;
 }
 
+.activeWishBtn {
+    background-image: url('../AboutProduct/img/wishlist-active.png');
+    background-size: contain;
+}
+
 .removeBtn {
     background-image: url('/src/apps/client/ui/components/Header/img/remove.png');
     width: 14px;
