--- a/src/apps/client/ui/components/Header/Header.css
+++ b/src/apps/client/ui/components/Header/Header.css
@@ -358,7 +358,7 @@
     }
 
     span:nth-child(1) {
-        top: 0px;
+        top: 0;
     }
 
     span:nth-child(2),
@@ -387,7 +387,7 @@
     &.active span:nth-child(4) {
         top: 6px;
         left: 50%;
-        width: 0%;
+        width: 0;
     }
 }
 
