--- a/src/apps/client/ui/components/WishList/WishList.css
+++ b/src/apps/client/ui/components/WishList/WishList.css
@@ -192,6 +192,16 @@
     }
 }
 
+.inCartBtn {
+    color: blackLight;
+    background-color: whiteBasic;
+    border: 1px solid greenBasic;
+
+    &:hover {
+        background-color: whiteBasic;
+    }
+}
+
 .continueShopping {
     @mixin removeDefaultButton;
     padding: 0;
