--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -128,6 +128,27 @@
     }
 }
 
+.activeOption {
+    &:before {
+         content: "";
+         width: 0;
+         height: 0;
+         border-style: solid;
+         border-width: 8px 5px 0 5px;
+         border-color: greenBasic transparent transparent transparent;
+         position: absolute;
+         top: 50%;
+         right: 10px;
+         margin-top: -5px;
+         transition: 0.25s ease-out;
+         transition-property: transform, border-color;
+     }
+}
+
+.oneActiveOption :before{
+    display: none;
+}
+
 .option{
     display: none;
     position: absolute;
