--- a/src/apps/client/App.css
+++ b/src/apps/client/App.css
@@ -4,10 +4,36 @@
     justify-content: space-between;
     height: 100vh;
     width: 100%;
+    opacity: 0;
+    transition-duration: .3s;
 }
 
-.pageContent{
+.pageVisible {
+    opacity: 1;
+}
+
+.pageContent {
     flex-grow: 1;
     flex-shrink: 0;
     flex-basis: auto;
+    opacity: 0;
+    transition-duration: .3s;
+}
+
+.pageContentVisible {
+    opacity: 1;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.fadeIn {
+    animation-name: fadeIn;
 }
