--- a/src/apps/client/ui/components/CartProduct/CartProduct.css
+++ b/src/apps/client/ui/components/CartProduct/CartProduct.css
@@ -149,6 +149,9 @@
 .productPrice {
     font-size: 24px;
     line-height: 28px;
+    color: blackLight;
+}
+.productDiscountPrice {
     color: redBasic;
 }
 
