--- a/src/apps/client/ui/components/AboutProduct/AboutProduct.css
+++ b/src/apps/client/ui/components/AboutProduct/AboutProduct.css
@@ -145,8 +145,10 @@
      }
 }
 
-.oneActiveOption :before{
-    display: none;
+.oneActiveOption {
+    &:before {
+         display: none;
+     }
 }
 
 .option{
